PR cleanup